--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ def retrofit_version = '2.9.0'
 def lifecycle_version = '2.4.1'
 def rxkotlin_version = "3.0.0"
 def nav_version = "2.4.2"
+def paging_version = "3.1.1"
 android {
     compileSdk 32
 
@@ -56,6 +57,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
 
     //Dependency Injection Dependencies
     implementation "com.google.dagger:hilt-android:$hiltVersion"
@@ -79,5 +82,9 @@ dependencies {
     //Lifecycle Dependencies
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    //Paging Dependencies
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
 
 }
