--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ def lifecycle_version = '2.4.1'
 def rxkotlin_version = "3.0.0"
 def nav_version = "2.4.2"
 def paging_version = "3.1.1"
+def glide_version = "4.13.0"
 android {
     compileSdk 32
 
@@ -25,6 +26,7 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField("String", "API_KEY", API_KEY)
+        buildConfigField("String", "BASEURL", "\"https://api.themoviedb.org/3\"")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -88,4 +90,7 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     implementation "androidx.paging:paging-rxjava3:$paging_version"
 
+    //Glide Dependencies
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 }
