--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //Test Dependencies
     testImplementation 'junit:junit:4.13.2'
@@ -85,7 +86,7 @@ dependencies {
     //Lifecycle Dependencies
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
+    implementation 'com.uber.autodispose2:autodispose-androidx-lifecycle:2.1.1'
     //Paging Dependencies
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     implementation "androidx.paging:paging-rxjava3:$paging_version"
