--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@
 buildscript {
     ext.kotlin_version = '1.6.21'
     dependencies {
+        def nav_version = "2.4.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
     }
 }
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+    id 'androidx.navigation.safeargs' version '2.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
     id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
